--- a/Battleship_Csharp/Battleship/Battleship.csproj
+++ b/Battleship_Csharp/Battleship/Battleship.csproj
@@ -129,6 +129,7 @@
     <Content Include="Resources\images\FileDialog_Inactive.png" />
     <Content Include="Resources\images\FileDialog_Scroll.png" />
     <Content Include="Resources\images\FileDialog_ScrollSmall.png" />
+    <Content Include="Resources\images\hb_button2.png" />
     <Content Include="Resources\images\loader_empty.png" />
     <Content Include="Resources\images\loader_full.png" />
     <Content Include="Resources\images\main_page.jpg" />
